--- a/mapa.html
+++ b/mapa.html
@@ -70,12 +70,15 @@
   // ---- CONFIGURAÇÃO DE EDIÇÃO ----
   let modoEditor = false;
 
+  // Pergunta se o utilizador quer ativar o modo edição
   if (confirm("Ativar modo de edição? (Apenas para o administrador)")) {
     const senha = prompt("Digite a senha de edição:");
-    if (senha === "flores123") { // <-- altera a senha aqui
+    if (senha === "flores123") { // <-- podes mudar a senha aqui
       modoEditor = true;
       alert("Modo de edição ativado!");
-      document.getElementById("btnDownload").style.display = "inline-block";
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnDownload").style.display = "inline-block";
+      });
     } else {
       alert("Senha incorreta. Apenas visualização.");
     }
@@ -117,13 +120,13 @@
   map.addControl(new maplibregl.NavigationControl());
 
   let todosOsMarkers = [];
-  let data = null; // Aqui guardaremos o GeoJSON original
+  let data = null; // Armazena o GeoJSON original
 
   // Carregar e exibir marcadores
   fetch("Locais etiquetados.json")
     .then(res => res.json())
     .then(json => {
-      data = json; // guarda o JSON original completo
+      data = json; // Guarda o GeoJSON completo
 
       data.features.forEach(f => {
         const [lng, lat] = f.geometry.coordinates;
@@ -137,18 +140,22 @@
         el.style.height = '16px';
         el.style.borderRadius = '50%';
         el.style.border = '2px solid white';
+        el.style.cursor = modoEditor ? 'grab' : 'pointer';
 
         const popup = new maplibregl.Popup({ closeButton: true })
           .setHTML(`<div style="color: black;"><b>${nome}</b></div>`);
 
+        // Cria o marcador (arrastável apenas se for editor)
         const marker = new maplibregl.Marker(el, { draggable: modoEditor })
           .setLngLat([lng, lat])
           .setPopup(popup)
           .addTo(map);
 
-        // Se estiver no modo editor, permite mover e atualizar as coordenadas
         if (modoEditor) {
+          // Mudar cursor durante o arrasto e atualizar coordenadas
+          marker.on('dragstart', () => { el.style.cursor = 'grabbing'; });
           marker.on('dragend', () => {
+            el.style.cursor = 'grab';
             const novaPos = marker.getLngLat();
             f.geometry.coordinates = [novaPos.lng, novaPos.lat];
             console.log(`Atualizado: ${nome}`, novaPos);
@@ -179,23 +186,22 @@
     });
   });
 
-  // Botão de download manual
+  // Botão para descarregar o JSON atualizado
   document.getElementById("btnDownload").addEventListener("click", () => {
     if (!data) return alert("Os dados ainda não foram carregados.");
     guardarAlteracoes();
   });
 
-  // Função para descarregar JSON atualizado
+  // Função para gerar o ficheiro atualizado
   function guardarAlteracoes() {
     const jsonData = JSON.stringify(data, null, 2);
     const blob = new Blob([jsonData], { type: "application/json" });
-
     const a = document.createElement("a");
     a.href = URL.createObjectURL(blob);
     a.download = "Locais etiquetados.json";
     a.click();
 
-    alert("Ficheiro JSON atualizado foi descarregado!\nSubstitui o antigo no GitHub.");
+    alert("Ficheiro JSON atualizado descarregado!\nSubstitui o antigo no GitHub.");
   }
 </script>
 </body>
