Adicionada rotação com dois dedos ao mapa (sem botão norte)

--- a/app.html
+++ b/app.html
@@ -21,22 +21,22 @@
   <div id="textFileName">Nenhum ficheiro carregado</div>
 
   <div class="spinner-row">
-    <label>SRO:</label>
+    <label>Escolher SRO:</label>
     <select id="spinnerSro"></select>
   </div>
 
   <div class="spinner-row">
-    <label>Splitter no SRO:</label>
+    <label>Escolher Splitter:</label>
     <select id="spinnerSplitter"></select>
   </div>
 
   <div class="spinner-row">
-    <label>PDO:</label>
+    <label>Escolher PDO:</label>
     <select id="spinnerPdo"></select>
   </div>
 
   <div class="spinner-row">
-    <label>Porto:</label>
+    <label>Escolher Porto:</label>
     <select id="spinnerPorto"></select>
   </div>
 
