Adicionada rotação com dois dedos ao mapa

--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Pesquisa F.O</title>
 <link rel="stylesheet" href="styles.css">
@@ -44,6 +44,6 @@
   <div id="textResult" class="result-box"></div>
 </div>
 
-<script src="app.js"></script>
+<script src="app.js" charset="UTF-8"></script>
 </body>
 </html>
