--- a/app.html
+++ b/app.html
@@ -21,24 +21,24 @@
   <div id="textFileName">Nenhum ficheiro carregado</div>
 
   <div class="spinner-row">
-    <label>Escolher SRO:</label>
+    <label>SRO:</label>
     <select id="spinnerSro"></select>
   </div>
 
   <div class="spinner-row">
-    <label>Escolher Splitter:</label>
+    <label>Splitter(SRO):</label>
     <select id="spinnerSplitter">
       <option value="">-- Seleciona --</option>
     </select>
   </div>
 
   <div class="spinner-row">
-    <label>Escolher PDO:</label>
+    <label>PDO:</label>
     <select id="spinnerPdo"></select>
   </div>
 
   <div class="spinner-row">
-    <label>Escolher Porto:</label>
+    <label>Porto:</label>
     <select id="spinnerPorto"></select>
   </div>
 
