--- a/app.html
+++ b/app.html
@@ -20,18 +20,33 @@
   <input type="file" id="btnLoadCsv" accept=".csv,.txt">
   <div id="textFileName">Nenhum ficheiro carregado</div>
 
+  <!-- SRO -->
   <div class="spinner-row">
     <label>SRO:</label>
     <select id="spinnerSro"></select>
   </div>
 
   <div class="spinner-row">
-    <label>Splitter(SRO):</label>
+    <label>Splitter (SRO):</label>
     <select id="spinnerSplitter">
-      <option value="">-- Seleciona --</option>
+      <option value="">-- Selecionar --</option>
     </select>
   </div>
 
+  <!-- JSO NOVO -->
+  <div class="spinner-row">
+    <label>JSO:</label>
+    <select id="spinnerJso"></select>
+  </div>
+
+  <div class="spinner-row">
+    <label>Splitter (JSO):</label>
+    <select id="spinnerJsoSplitter">
+      <option value="">-- Selecionar --</option>
+    </select>
+  </div>
+
+  <!-- PDO -->
   <div class="spinner-row">
     <label>PDO:</label>
     <select id="spinnerPdo"></select>
@@ -43,6 +58,7 @@
   </div>
 
   <button id="btnPesquisar">Pesquisar</button>
+
   <div id="textResult" class="result-box"></div>
 </div>
 
