--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="manifest" href="manifest.json">
-<title>FO Flores</title>
+<title>FO Açores</title>
 <link rel="stylesheet" href="styles.css">
 <style>
 body {
@@ -37,7 +37,7 @@ button:hover {
 </style>
 </head>
 <body>
-  <h1>Bem-vindo à FO Flores</h1>
+  <h1>Bem-vindo à FO Açores</h1>
   <p>Aplicação de Pesquisa de Fibra Óptica</p>
   <button onclick="window.location.href='app.html'">Iniciar</button>
 
